# snip-cli

./: Cargo.toml  readme.md
src/: main.rs
src/common/: entities.rs  use_case.rs
